Afroteck officially renamed to Agartuu

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -152,7 +152,7 @@
                         </div> -->
                         <div class="section-title aos-init aos-animate" data-aos="fade-up">
                             <h2 class="text-black h1 site-section-heading text-center">Si'achii Agartuu </h2>
-                            <p class="lead">Agartuu Odeeffanno Wayitaawaa Kennuun Uummata Oromoo Teekinooloojii Waliin qixxee akkaa tarkanfatu ni tattaafata
+                            <p class="lead">Agartuun Odeeffanno Wayitaawaa Kennuun Uummata Oromoo Teekinooloojii Waliin qixxee akkaa tarkanfatu ni tattaafata
                             </p>
                         </div>
                     </div>
