--- a/src/app/oduu-teck/iphone-warqiirraa-hojjetame/iphone-warqiirraa-hojjetame.component.html
+++ b/src/app/oduu-teck/iphone-warqiirraa-hojjetame/iphone-warqiirraa-hojjetame.component.html
@@ -5,18 +5,18 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="Agartuu">
     <meta name="twitter:title" content="Agartuu">
-    <meta name="twitter:description" content="Agartuu marsariitii (Website) odeeffannoo wayitawaa teekinoloojii waliin walqabate garaagaraa wallitti funanu fi qindeessuun afaan oromootti hiikuun ummata oromoof dhiheessuudha.
+    <meta name="twitter:description" content="Agartuun marsariitii (Website) odeeffannoo wayitawaa teekinoloojii waliin walqabate garaagaraa wallitti funanu fi qindeessuun afaan oromootti hiikuun ummata oromoof dhiheessuudha.
     Agartuu jechi jedhu jecha lama irraa kan ijaarame yoo ta’u innis “Afrikaa” fi “Technology” dha">
-    <meta name="twitter:image" content="https://www.Agartuu.com/assets/MyLogo.png">
+    <meta name="twitter:image" content="https://www.agartuu.com/assets/MyLogo.png">
 
     <!-- facebook and other social sites -->
     <meta property="og:type" content="Agartuu">
     <meta property="og:site_name" content="Agartuu">
     <meta property="og:title" content="Agartuu">
-    <meta property="og:description" content="Agartuu marsariitii (Website) odeeffannoo wayitawaa teekinoloojii waliin walqabate garaagaraa wallitti funanu fi qindeessuun afaan oromootti hiikuun ummata oromoof dhiheessuudha.
+    <meta property="og:description" content="Agartuun marsariitii (Website) odeeffannoo wayitawaa teekinoloojii waliin walqabate garaagaraa wallitti funanu fi qindeessuun afaan oromootti hiikuun ummata oromoof dhiheessuudha.
    Agartuu jechi jedhu jecha lama irraa kan ijaarame yoo ta’u innis “Afrikaa” fi “Technology” dha">
-    <meta property="og:image" content="https://www.Agartuu.com/assets/MyLogo.png">
-    <meta property="og:url" content="https://www.Agartuu.com/iphone-warqii">
+    <meta property="og:image" content="https://www.agartuu.com/assets/MyLogo.png">
+    <meta property="og:url" content="https://www.agartuu.com/iphone-warqii">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
