--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -68,7 +68,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-                <p class="h6">&copy; 2019 - {{ dates | date:'yyyy' }} Agartuu All right reserved.<a class="text-green ml-2" href="https://www.Agartuu.com" target="_self">Agartuu</a></p>
+                <p class="h6">&copy; 2019 - {{ dates | date:'yyyy' }} Agartuu All right reserved.<a class="text-green ml-2" href="https://www.agartuu.com" target="_self">Agartuu</a></p>
             </div>
         </div>
     </div>
